Improve performance cleanup paths